week1 | внес правки

--- a/task2/index.html
+++ b/task2/index.html
@@ -4,67 +4,69 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class = "wrapper _type1">
-            <div class = "block block1"></div>
-            <div class = "block block2">
-                <p>
-                    Текст второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст<br> второго блока 
-                    Текст второго блока Текст<br> второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст второго блока 
-                    Текст<br> второго блока Текст второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст второго блока 
-                </p>
+        <div class = "container">
+            <div class = "wrapper _type1">
+                <div class = "block block1"></div>
+                <div class = "block block2">
+                    <p>
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                    </p>
+                </div>
             </div>
-        </div>
-        
-        <div class = "wrapper _type2">
-            <div class = "block block1"></div>
-            <div class = "block block2">
-                <p>
-                    Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока 
-                    Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br>
-                    Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока 
-                </p>
+            
+            <div class = "wrapper _type2">
+                <div class = "block block1"></div>
+                <div class = "block block2">
+                    <p>
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class = "wrapper _type3">
-            <div class = "block block1"></div>
-            <div class = "block block2">
-                <p>
-                    Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока 
-                    Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br>
-                    Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока 
-                </p>
+            <div class = "wrapper _type3">
+                <div class = "block block1"></div>
+                <div class = "block block2">
+                    <p>
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class = "wrapper _type4">
-            <div class = "block block1"></div>
-            <div class = "block block2">
-                <p>
-                    Текст второго блока Текст второго блока Текст второго<br> блока Текст второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст второго блока<br> Текст второго блока 
-                    Текст второго блока Текст второго<br> блока Текст второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст второго блока<br> Текст второго блока Текст второго блока 
-                    Текст второго<br> блока Текст второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст второго блока 
-                </p>
+            <div class = "wrapper _type4">
+                <div class = "block block1"></div>
+                <div class = "block block2">
+                    <p>
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class = "wrapper _type5">
-            <div class = "block block1"></div>
-            <div class = "block block2">
-                <p>
-                    тут теперь мало текста
-                </p>
+            <div class = "wrapper _type5">
+                <div class = "block block1"></div>
+                <div class = "block block2">
+                    <p>
+                        тут теперь мало текста
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class = "wrapper _type6">
-            <div class = "block block1"></div>
-            <div class = "block block2">
-                <p>
-                    Текст второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст второго<br> блока Текст второго блока Текст второго блока Текст<br> второго блока Текст второго блока 
-                    Текст второго<br> блока Текст второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст второго<br> блока Текст второго блока Текст второго блока Текст второго блока<br> 
-                    Текст второго блока Текст второго блока Текст второго блока Текст<br> второго блока Текст второго блока Текст второго блока 
-                </p>
+            <div class = "wrapper _type6">
+                <div class = "block block1"></div>
+                <div class = "block block2">
+                    <p>
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                        Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока Текст второго блока 
+                    </p>
+                </div>
             </div>
         </div>
     </body>
