--- a/week3/index.html
+++ b/week3/index.html
@@ -10,7 +10,8 @@
     <!-- Без него ошибка ReferenceError: $ is not defined -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script src="//api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/slider.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -80,18 +81,38 @@
     <main>
         <div class="slider">
             <p class="back-text">RITER</p>
-            <div class="container">
-                <div class="row justify-content-start">
-                    <div class="col">
-                        <p>ОФИСНАЯ МЕБЕЛЬ</p>
-                    </div>
+            <div class="slide-info">
+                <p>ОФИСНАЯ МЕБЕЛЬ</p>
+                <span>Новый каталог 2018-2019</span>
+                <button class="btn-slider">ПОДРОБНЕЕ О КАТАЛОГЕ</button>
+                <div class="slider-pagination">
+                    <ul>
+                        <li class="pagination-dots 1" onclick="currentSlide(1)"></li>
+                        <li class="pagination-dots 2" onclick="currentSlide(2)"></li>
+                        <li class="pagination-dots 3" onclick="currentSlide(3)"></li>
+                        <li class="pagination-dots 4" onclick="currentSlide(4)"></li>
+                        <li class="pagination-dots 5" onclick="currentSlide(5)"></li>
+                    </ul>
                 </div>
             </div>
-            
-            <div class="row justify-content-between">
-                <div class="col">
-                    <img src="./img/4_5.png" alt="">
-                </div>
+            <div class="item">
+                <img src="./img/slide-1.png" alt="">
+            </div>
+
+            <div class="item" style="display: none;">
+                <img src="./img/slide-2.png" alt="">
+            </div>
+
+            <div class="item" style="display: none;">
+                <img src="./img/slide-3.png" alt="">
+            </div>
+
+            <div class="item" style="display: none;">
+                <img src="./img/slide-4.png" alt="">
+            </div>
+
+            <div class="item" style="display: none;">
+                <img src="./img/slide-5.png" alt="">
             </div>
         </div>
         <section class="info-top" style="margin-top: 80px;">
@@ -455,6 +476,65 @@
                 </div>
             </div>
         </div>
+
+        <div class="blog-mebel">
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-sm-7">
+                        <p class = "blog-heading">БЛОГ ПРО ДИЗАЙНЕРСКУЮ МЕБЕЛЬ</p>
+                        <div class="row">
+                            <div class="col" style="margin-left: 10%;">
+                               
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-5">
+                        <a href="#"><p>ВСЕ НОВОСТИ</p></a>
+                        <a href="#"><img src="./img/Arrow.png" alt="" class=""></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm">
+                        <img src="../week3/img/blog-mebel-img.jpg" alt="" >
+                        <div class="article-info">
+                            <a href=""><p style="font-family: Georgia; font-size: 14px; margin: 10px 0;">12/08/18</p></a>
+                            <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.1em; padding-bottom: 10px;">НАЗВАНИЕ СТАТЬИ</p></a>
+                            <p style="font-family: GothamProRegular; font-size: 13px; opacity:0.4; line-height: 19px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                            <div class="read">
+                                <a href="#"><p>ЧИТАТЬ ДАЛЕЕ</p></a>
+                                <a href="#"><img src="./img/Arrow.png" alt="" class=""></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm">
+                        <img src="../week3/img/blog-mebel-img.jpg" alt="" >
+                        <div class="article-info">
+                            <a href=""><p style="font-family: Georgia; font-size: 14px; margin: 10px 0;">12/08/18</p></a>
+                            <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.1em; padding-bottom: 10px;">НАЗВАНИЕ СТАТЬИ</p></a>
+                            <p style="font-family: GothamProRegular; font-size: 13px; opacity:0.4; line-height: 19px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                            <div class="read">
+                                <a href="#"><p>ЧИТАТЬ ДАЛЕЕ</p></a>
+                                <a href="#"><img src="./img/Arrow.png" alt="" class=""></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm">
+                        <img src="../week3/img/blog-mebel-img.jpg" alt="" >
+                        <div class="article-info">
+                            <a href=""><p style="font-family: Georgia; font-size: 14px; margin: 10px 0;">12/08/18</p></a>
+                            <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.1em; padding-bottom: 10px;">НАЗВАНИЕ СТАТЬИ</p></a>
+                            <p style="font-family: GothamProRegular; font-size: 13px; opacity:0.4; line-height: 19px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                            <div class="read">
+                                <a href="#"><p>ЧИТАТЬ ДАЛЕЕ</p></a>
+                                <a href="#"><img src="./img/Arrow.png" alt="" class=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
@@ -541,5 +621,8 @@
             </div>
         </div>
     </footer>
+    <script>
+        window.onload = currentSlide(1); //Для автозапуска слайдера
+    </script>
 </body>
 </html>
