week4 | merge week3

--- a/week4-riter/index.html
+++ b/week4-riter/index.html
@@ -22,33 +22,33 @@
             <a href="#"><div class="nav-menu">СОТРУДНИЧЕСТВО</div></a>
             <a href="#"><div class="nav-menu">ДОСТАВКА</div></a>
             <a href="#"><div class="nav-menu">ОПЛАТА И ВОЗВРАТ</div></a>
-            <a href="#"><div class="nav-menu">МЕНЮ<img src="../week3/img/9.png"></div></a>
+            <a href="#"><div class="nav-menu">МЕНЮ<img src="../week4-riter/img/9.png"></div></a>
         </div>
     </nav>
     <header class="flex-container">
         <div class="flex-item">
-            <img src="../week3/img/phone.png" alt="">
+            <img src="../week4-riter/img/phone.png" alt="">
             <div class="phone">
                 <p style="font-size: 10px; opacity: 0.5;">ВАШ ГОРОД:<span id="city">ПЕРМЬ</span></p>
                 <p id = "number">+7 495 290-34-84</p>
             </div>  
         </div>
         <div class="flex-item">
-            <img src="../week3/img/email.png" alt=""> 
+            <img src="../week4-riter/img/email.png" alt=""> 
             <div class="email">
                 <p style="font-size: 10px; opacity: 0.5;">Напишите нам</p>
                 <p>hello@riter.ru</p>
             </div>
         </div>
         <div class="flex-item">
-            <img src="../week3/img/logo-1.png" alt="">
+            <img src="../week4-riter/img/logo-1.png" alt="">
         </div>
         <div class="flex-item">
             <div class="sign-in">
                 <p style="font-size: 10px; opacity: 0.5; text-align: right;">Личный кабинет</p>
                 <p style="text-align: right;">Вход/регистрация</p>
             </div>
-            <img src="../week3/img/sign-in.png" alt=""> 
+            <img src="../week4-riter/img/sign-in.png" alt=""> 
         </div>
         <div class="flex-item">
             <div class="cart">
@@ -59,21 +59,21 @@
                 <p>2</p>
             </div>
             <div class="counter-triangle"></div>
-            <img src="../week3/img/Union.png" alt=""> 
+            <img src="../week4-riter/img/Union.png" alt=""> 
         </div>
     </header>
     <header class="menu">
         <div class="container">
             <div class="row">
-                <a href="#"><div class="col"><img src="../week3/img/1.png"><p>КРЕСЛА</p></div></a>
-                <a href="#"><div class="col"><img src="../week3/img/2.png"><p>СВЕТИЛЬНИКИ</p></div></a>
-                <a href="#"><div class="col"><img src="../week3/img/3.png"><p>ДИВАНЫ</p></div></a>
-                <a href="#"><div class="col"><img src="../week3/img/4.png"><p>СТОЛЫ</p></div></a>
-                <a href="#"><div class="col"><img src="../week3/img/5.png"><p>СТУЛЬЯ</p></div></a>
-                <a href="#"><div class="col"><img src="../week3/img/6.png"><p>ПУФЫ</p></div></a>
-                <a href="#"><div class="col"><img src="../week3/img/7.png"><p>ДЕКОР</p></div></a>
-                <a href="#"><div class="col"><img src="../week3/img/8.png"><p>СВЕТИЛЬНИКИ</p></div></a>
-                <a href="#"><div class="col"><img src="../week3/img/Group.png"><p style="margin-top: 5px;">ЕЩЕ</p><div class="rectangle"></div></div></a>
+                <a href="#"><div class="col"><img src="../week4-riter/img/1.png"><p>КРЕСЛА</p></div></a>
+                <a href="#"><div class="col"><img src="../week4-riter/img/2.png"><p>СВЕТИЛЬНИКИ</p></div></a>
+                <a href="#"><div class="col"><img src="../week4-riter/img/3.png"><p>ДИВАНЫ</p></div></a>
+                <a href="#"><div class="col"><img src="../week4-riter/img/4.png"><p>СТОЛЫ</p></div></a>
+                <a href="#"><div class="col"><img src="../week4-riter/img/5.png"><p>СТУЛЬЯ</p></div></a>
+                <a href="#"><div class="col"><img src="../week4-riter/img/6.png"><p>ПУФЫ</p></div></a>
+                <a href="#"><div class="col"><img src="../week4-riter/img/7.png"><p>ДЕКОР</p></div></a>
+                <a href="#"><div class="col"><img src="../week4-riter/img/8.png"><p>СВЕТИЛЬНИКИ</p></div></a>
+                <a href="#"><div class="col"><img src="../week4-riter/img/Group.png"><p style="margin-top: 5px;">ЕЩЕ</p><div class="rectangle"></div></div></a>
             </div>
         </div>
     </header>
@@ -119,22 +119,22 @@
             <div class="container">
                 <div class="row" style="text-align: center;">
                     <article class="col">
-                        <img src="../week3/img/paper-plane.png" alt="" >
+                        <img src="../week4-riter/img/paper-plane.png" alt="" >
                         <h4>БЫСТРАЯ ДОСТАВКА</h4>
                         <p style="font-family: Futura Light Regular; opacity:0.4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </article>
                     <article class="col">
-                        <img src="../week3/img/armchair.png" alt="" >
+                        <img src="../week4-riter/img/armchair.png" alt="" >
                         <h4>30 ТЫС.+ МОДЕЛЕЙ</h4>
                         <p style="font-family: Futura Light Regular; opacity:0.4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </article>
                     <article class="col">
-                        <img src="../week3/img/quality.png" alt="" >
+                        <img src="../week4-riter/img/quality.png" alt="" >
                         <h4>ТОЛЬКО ОРИГИНАЛЫ</h4>
                         <p style="font-family: Futura Light Regular; opacity:0.4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </article>
                     <article class="col">
-                        <img src="../week3/img/discount.png" alt="" >
+                        <img src="../week4-riter/img/discount.png" alt="" >
                         <h4>110% НИЗКИЕ ЦЕНЫ</h4>
                         <p style="font-family: Futura Light Regular; opacity:0.4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </article>
@@ -146,8 +146,8 @@
             <div class="container">
                 <div class="row">
                     <article class="col-sm-3" style="box-shadow: -20px 24px 64px #F6F6F6;">
-                        <a href=""><img src="../week3/img/chair.png" alt="" ></a>
-                        <a href="#"><img src="../week3/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
+                        <a href=""><img src="../week4-riter/img/chair.png" alt="" ></a>
+                        <a href="#"><img src="../week4-riter/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
                         <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.2em;">СТУЛ КАКОЙ-ТО МАРКИ</p></a>
                         <div class="info-product">
                             <p style="font-family: Futura Light Regular; font-size: 10px; opacity:0.4; letter-spacing: 0.1em;">АРТ. 42342347</p>
@@ -159,8 +159,8 @@
                     </article>
 
                     <article class="col-sm-3" style="box-shadow: -20px 24px 64px #F6F6F6;">
-                        <a href=""><img src="../week3/img/chair.png" alt="" ></a>
-                        <a href="#"><img src="../week3/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
+                        <a href=""><img src="../week4-riter/img/chair.png" alt="" ></a>
+                        <a href="#"><img src="../week4-riter/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
                         <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.2em;">СТУЛ КАКОЙ-ТО МАРКИ</p></a>
                         <div class="info-product">
                             <p style="font-family: Futura Light Regular; font-size: 10px; opacity:0.4; letter-spacing: 0.1em;">АРТ. 42342347</p>
@@ -172,8 +172,8 @@
                     </article>
 
                     <article class="col-sm-3" style="box-shadow: -20px 24px 64px #F6F6F6;">
-                        <a href=""><img src="../week3/img/chair.png" alt="" ></a>
-                        <a href="#"><img src="../week3/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
+                        <a href=""><img src="../week4-riter/img/chair.png" alt="" ></a>
+                        <a href="#"><img src="../week4-riter/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
                         <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.2em;">СТУЛ КАКОЙ-ТО МАРКИ</p></a>
                         <div class="info-product">
                             <p style="font-family: Futura Light Regular; font-size: 10px; opacity:0.4; letter-spacing: 0.1em;">АРТ. 42342347</p>
@@ -185,8 +185,8 @@
                     </article>
 
                     <article class="col-sm-3" style="box-shadow: -20px 24px 64px #F6F6F6;">
-                        <a href=""><img src="../week3/img/chair.png" alt="" ></a>
-                        <a href="#"><img src="../week3/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
+                        <a href=""><img src="../week4-riter/img/chair.png" alt="" ></a>
+                        <a href="#"><img src="../week4-riter/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
                         <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.2em;">СТУЛ КАКОЙ-ТО МАРКИ</p></a>
                         <div class="info-product">
                             <p style="font-family: Futura Light Regular; font-size: 10px; opacity:0.4; letter-spacing: 0.1em;">АРТ. 42342347</p>
@@ -198,8 +198,8 @@
                     </article>
 
                     <article class="col-sm-3" style="box-shadow: -20px 24px 64px #F6F6F6;">
-                        <a href=""><img src="../week3/img/chair.png" alt="" ></a>
-                        <a href="#"><img src="../week3/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
+                        <a href=""><img src="../week4-riter/img/chair.png" alt="" ></a>
+                        <a href="#"><img src="../week4-riter/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
                         <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.2em;">СТУЛ КАКОЙ-ТО МАРКИ</p></a>
                         <div class="info-product">
                             <p style="font-family: Futura Light Regular; font-size: 10px; opacity:0.4; letter-spacing: 0.1em;">АРТ. 42342347</p>
@@ -211,8 +211,8 @@
                     </article>
 
                     <article class="col-sm-3" style="box-shadow: -20px 24px 64px #F6F6F6;">
-                        <a href=""><img src="../week3/img/chair.png" alt="" ></a>
-                        <a href="#"><img src="../week3/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
+                        <a href=""><img src="../week4-riter/img/chair.png" alt="" ></a>
+                        <a href="#"><img src="../week4-riter/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
                         <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.2em;">СТУЛ КАКОЙ-ТО МАРКИ</p></a>
                         <div class="info-product">
                             <p style="font-family: Futura Light Regular; font-size: 10px; opacity:0.4; letter-spacing: 0.1em;">АРТ. 42342347</p>
@@ -224,8 +224,8 @@
                     </article>
 
                     <article class="col-sm-3" style="box-shadow: -20px 24px 64px #F6F6F6;">
-                        <a href=""><img src="../week3/img/chair.png" alt="" ></a>
-                        <a href="#"><img src="../week3/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
+                        <a href=""><img src="../week4-riter/img/chair.png" alt="" ></a>
+                        <a href="#"><img src="../week4-riter/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
                         <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.2em;">СТУЛ КАКОЙ-ТО МАРКИ</p></a>
                         <div class="info-product">
                             <p style="font-family: Futura Light Regular; font-size: 10px; opacity:0.4; letter-spacing: 0.1em;">АРТ. 42342347</p>
@@ -237,8 +237,8 @@
                     </article>
 
                     <article class="col-sm-3" style="box-shadow: -20px 24px 64px #F6F6F6;">
-                        <a href=""><img src="../week3/img/chair.png" alt="" ></a>
-                        <a href="#"><img src="../week3/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
+                        <a href=""><img src="../week4-riter/img/chair.png" alt="" ></a>
+                        <a href="#"><img src="../week4-riter/img/like.png" alt="" style="float: right; cursor: pointer;"></a>
                         <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.2em;">СТУЛ КАКОЙ-ТО МАРКИ</p></a>
                         <div class="info-product">
                             <p style="font-family: Futura Light Regular; font-size: 10px; opacity:0.4; letter-spacing: 0.1em;">АРТ. 42342347</p>
@@ -254,7 +254,7 @@
 
         <section class="chair">
             <article class="chair-flex">
-                <img src="../week3/img/336-HFR8_7.png" alt="" style="visibility: hidden;">
+                <img src="../week4-riter/img/336-HFR8_7.png" alt="" style="visibility: hidden;">
                 <div class="chair-info">
                     <p class="p1">СТУЛЬЯ, КРЕСЛА, ДИВАНЫ</p>
                     <p class="p2">Авторский дизайн, большой ассортимент и многообразие цветовой гаммы в сочетании с отличным качеством.</p>
@@ -263,7 +263,7 @@
             </article>
 
             <article class="chair-flex">
-                <img src="../week3/img/336-HFR8_7.png" alt="" style="visibility: hidden;">
+                <img src="../week4-riter/img/336-HFR8_7.png" alt="" style="visibility: hidden;">
                 <div class="chair-info">
                     <p class="p1">СТУЛЬЯ, КРЕСЛА, ДИВАНЫ</p>
                     <p class="p2">Авторский дизайн, большой ассортимент и многообразие цветовой гаммы в сочетании с отличным качеством.</p>
@@ -272,7 +272,7 @@
             </article>
 
             <article class="chair-flex">
-                <img src="../week3/img/336-HFR8_7.png" alt="" style="visibility: hidden;">
+                <img src="../week4-riter/img/336-HFR8_7.png" alt="" style="visibility: hidden;">
                 <div class="chair-info">
                     <p class="p1">СТУЛЬЯ, КРЕСЛА, ДИВАНЫ</p>
                     <p class="p2">Авторский дизайн, большой ассортимент и многообразие цветовой гаммы в сочетании с отличным качеством.</p>
@@ -281,7 +281,7 @@
             </article>
 
             <article class="chair-flex">
-                <img src="../week3/img/336-HFR8_7.png" alt="" style="visibility: hidden;">
+                <img src="../week4-riter/img/336-HFR8_7.png" alt="" style="visibility: hidden;">
                 <div class="chair-info">
                     <p class="p1">СТУЛЬЯ, КРЕСЛА, ДИВАНЫ</p>
                     <p class="p2">Авторский дизайн, большой ассортимент и многообразие цветовой гаммы в сочетании с отличным качеством.</p>
@@ -495,7 +495,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm">
-                        <img src="../week3/img/blog-mebel-img.jpg" alt="" >
+                        <img src="../week4-riter/img/blog-mebel-img.jpg" alt="" >
                         <div class="article-info">
                             <a href=""><p style="font-family: Georgia; font-size: 14px; margin: 10px 0;">12/08/18</p></a>
                             <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.1em; padding-bottom: 10px;">НАЗВАНИЕ СТАТЬИ</p></a>
@@ -508,7 +508,7 @@
                     </div>
 
                     <div class="col-sm">
-                        <img src="../week3/img/blog-mebel-img.jpg" alt="" >
+                        <img src="../week4-riter/img/blog-mebel-img.jpg" alt="" >
                         <div class="article-info">
                             <a href=""><p style="font-family: Georgia; font-size: 14px; margin: 10px 0;">12/08/18</p></a>
                             <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.1em; padding-bottom: 10px;">НАЗВАНИЕ СТАТЬИ</p></a>
@@ -521,7 +521,7 @@
                     </div>
 
                     <div class="col-sm">
-                        <img src="../week3/img/blog-mebel-img.jpg" alt="" >
+                        <img src="../week4-riter/img/blog-mebel-img.jpg" alt="" >
                         <div class="article-info">
                             <a href=""><p style="font-family: Georgia; font-size: 14px; margin: 10px 0;">12/08/18</p></a>
                             <a href="#" style="text-decoration: none; color:black"><p style="font-family: Futura New ; font-size: 17px; letter-spacing: 0.1em; padding-bottom: 10px;">НАЗВАНИЕ СТАТЬИ</p></a>
@@ -585,10 +585,10 @@
                 <div class="feedback">
                     <form action="/">
                          <input type="text" placeholder="example@email.ru">
-                         <button class="verified" type="submit"><img src="../week3/img/verified.png" alt="" style="display: block; margin: 0 auto;"></div></button>
+                         <button class="verified" type="submit"><img src="../week4-riter/img/verified.png" alt="" style="display: block; margin: 0 auto;"></div></button>
                     <div class="social">
-                        <a href="#"><img src="../week3/img/instagram-logo.png" alt="" style="margin-right: 5px;"></a>
-                        <a href="#"><img src="../week3/img/facebook.png" alt=""></a>
+                        <a href="#"><img src="../week4-riter/img/instagram-logo.png" alt="" style="margin-right: 5px;"></a>
+                        <a href="#"><img src="../week4-riter/img/facebook.png" alt=""></a>
                     </div>
                 </div>
             </div>
