--- a/week4-riter/index.html
+++ b/week4-riter/index.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <!-- Без него ошибка ReferenceError: $ is not defined -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
-    <script src="//api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
-    <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/slider.js"></script>
     <title>Document</title>
 </head>
@@ -79,19 +76,19 @@
     </header>
 
     <main>
-        <div class="slider">
+        <div class="slider" >
             <p class="back-text">RITER</p>
             <div class="slide-info">
                 <p>ОФИСНАЯ МЕБЕЛЬ</p>
                 <span>Новый каталог 2018-2019</span>
                 <button class="btn-slider">ПОДРОБНЕЕ О КАТАЛОГЕ</button>
                 <div class="slider-pagination">
-                    <ul>
-                        <li class="pagination-dots 1" onclick="currentSlide(1)"></li>
-                        <li class="pagination-dots 2" onclick="currentSlide(2)"></li>
-                        <li class="pagination-dots 3" onclick="currentSlide(3)"></li>
-                        <li class="pagination-dots 4" onclick="currentSlide(4)"></li>
-                        <li class="pagination-dots 5" onclick="currentSlide(5)"></li>
+                    <ul id = "ul-dots">
+                        <li class="pagination-dots" id = "dots" onclick="currentSlide(1)"></li>
+                        <li class="pagination-dots" id = "dots" onclick="currentSlide(2)"></li>
+                        <li class="pagination-dots" id = "dots" onclick="currentSlide(3)"></li>
+                        <li class="pagination-dots" id = "dots" onclick="currentSlide(4)"></li>
+                        <li class="pagination-dots" id = "dots" onclick="currentSlide(5)"></li>
                     </ul>
                 </div>
             </div>
@@ -621,8 +618,20 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
+    <script src="//api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <script>
         window.onload = currentSlide(1); //Для автозапуска слайдера
+
+        var stopAnim = document.getElementById('ul-dots');
+
+        //Остановить автопрокрутку | Если ставить на <li>, то не работает, поставил на <ul>
+        stopAnim.addEventListener('click', () => {
+            clearTimeout(flipping);
+        });
     </script>
+    
 </body>
 </html>
